--- a/currency-converter-angular/src/app/components/header/header.component.sass
+++ b/currency-converter-angular/src/app/components/header/header.component.sass
@@ -19,3 +19,15 @@
 
 .name
 	font-size: 150%
+
+.origin
+	height: 32px
+	width: 32px
+
+.currency
+	margin-right: 1%
+	margin-left: auto
+	font-size: 150%
+	display: flex
+	justify-content: space-between
+	width: 20%
