finished Currency  converter, update api key

--- a/currency-converter-angular/src/app/components/conversion/conversion.component.html
+++ b/currency-converter-angular/src/app/components/conversion/conversion.component.html
@@ -2,20 +2,35 @@
   <h3 class="title">Currency Converter</h3>
   <div class="date"></div>
   <div class="converter">
-    <mat-card class="input">
-      <mat-form-field>
-        <mat-label>Input</mat-label>
-        <input matInput>
+    <mat-card class="input-data">
+      <div class="have-phase">I have</div>
+      <mat-form-field class="input">
+        <input matInput  #input1 [(ngModel)]="inputSumma" (keydown)="calculateSumma($event)">
       </mat-form-field>
-      <mat-form-field>
-        <mat-label>Select</mat-label>
-        <mat-select>
-          <mat-option value="one">First option</mat-option>
-          <mat-option value="two">Second option</mat-option>
+      <mat-form-field class="select">
+        <mat-select [(ngModel)]="inputCurrency"  (selectionChange)="calculateSumma($event)">
+          <mat-option value="USD"><img alt="Image" class="origin" src="{{ getFlag('us') }}" /> USD</mat-option>
+          <mat-option value="EUR"><img alt="Image" class="origin" src="{{ getFlag('eu') }}" /> EUR</mat-option>
+          <mat-option value="UAH"><img alt="Image" class="origin" src="{{ getFlag('ua') }}" /> UAH</mat-option>
         </mat-select>
       </mat-form-field>
+      <div class="currency">1 {{inputCurrency}}  = {{convertToOneValutaInput}} {{outputCurrency}}</div>
     </mat-card>
-    <mat-card class="output"></mat-card>
+    <button class="exange-button" (click)="change()"><mat-icon>cached</mat-icon></button>
+    <mat-card class="output-data">
+      <div class="have-phase">I get</div>
+      <mat-form-field class="input">
+        <input matInput #input2 [(ngModel)]="outputSumma" (keydown)="calculateSummaFromOutPut($event)">
+      </mat-form-field>
+      <mat-form-field class="select">
+        <mat-select [(ngModel)]="outputCurrency" (selectionChange)="calculateSumma($event)">
+          <mat-option value="USD"><img alt="Image" class="origin" src="{{ getFlag('us') }}" /> USD</mat-option>
+          <mat-option value="EUR"><img alt="Image" class="origin" src="{{ getFlag('eu') }}" /> EUR</mat-option>
+          <mat-option value="UAH"><img alt="Image" class="origin" src="{{ getFlag('ua') }}" /> UAH</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div class="currency">1 {{outputCurrency}}  = {{convertToOneValutaOutput}} {{inputCurrency}}</div>
+    </mat-card>
   </div>
 
 </mat-card>
