--- a/currency-converter-angular/src/app/components/conversion/conversion.component.sass
+++ b/currency-converter-angular/src/app/components/conversion/conversion.component.sass
@@ -1,5 +1,9 @@
 @import "src/styles/colors"
 
+@mixin data
+  position: absolute
+  color: $gray-200
+
 .main
   position: absolute
   top: 20vh
@@ -22,6 +26,55 @@
   margin: 6% 5%
   justify-content: space-between
 
-.output, .input
+.output-data, .input-data
   width: 45%
+  display: flex
+  justify-content: space-between
+  align-items: center
+  .input
+    width: 65%
+    font-size: 180%
+  .select
+    width: 25%
 
+.origin
+  height: 32px
+  width: 32px
+
+::ng-deep .mat-option-text
+  display: flex !important
+  align-items: center  !important
+  gap: 5px !important
+
+.mat-icon
+  color: $green
+
+.exange-button
+  position: absolute
+  width: 5%
+  height: 14%
+  top: 25vh
+  left: 39vw
+  border-radius: 50%
+  border: 1px solid $green
+  background-color: $gray-100
+  cursor: pointer
+  z-index: 1
+  &:hover
+    background-color: $white
+    transform: scale(1.03)
+    box-shadow: 0px 0px 20px $green
+  &:active
+    transform: scale(0.9)
+
+.have-phase
+  top: 4vh
+  left: 2vw
+  font-size: 150%
+  @include data
+
+.currency
+  top: 21vh
+  left: 2vw
+  font-size: 120%
+  @include data
